<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombre_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombres"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cedula_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cedula"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/foto_asesor"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avatar" />

        <Button
            android:id="@+id/foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/tomar_foto"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gris_boton"
            android:text="@string/volver"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>